[package]
name = "blockchain"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocks = { path = "blocks" }
chain_sync = { path = "chain_sync" }
message_pool = { path = "message_pool" }
storage_consensus = { path = "storage_consensus" }
message = {path = "../vm/message"}