[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
gosyn = { git = "https://github.com/aatifsyed/gosyn", version = "0.2.5" }
itertools = "0.11.0"
prettyplease = "0.2.15"
proc-macro2 = { version = "1.0.69", default-features = false }
quote = { version = "1.0.33", default-features = false }
syn = { version = "2.0.38", default-features = false, features = ["quote", "printing", "parsing", "clone-impls"] }
