[package]
name = "forest_crypto"
description = "Filecoin crypto utilities for use in Forest"
license = "MIT OR Apache-2.0"
version = "0.6.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2021"
repository = "https://github.com/ChainSafe/forest"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
forest_encoding.workspace = true
fvm_shared = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]

[features]
default = ["blst"]
blst = ["fvm_shared/blst"]
