[package]
name = "forest_crypto"
description = "Filecoin crypto utilities for use in Forest"
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
forest_encoding.workspace = true
fvm_shared = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]

[features]
default = ["blst"]
blst = ["fvm_shared/blst"]
