[package]
name = "forest_encoding"
description = "Filecoin encoding and decoding utilities for use in Forest"
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
blake2b_simd.workspace = true
fvm_ipld_encoding3.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
serde_repr.workspace = true
serde_tuple = "0.5"

[dev-dependencies]
anyhow.workspace = true
cs_serde_bytes = "0.12.2"
rand.workspace = true
serde_json.workspace = true
